* BUG#8962 Initialize new future invoice amount with decimal
* BUG#8673 Do not select invoice with start date posterior to contract termination date in contract invoice post batch
* OTH#0000 Add check for existing billing informations on contract before proceeding with the initialization

Version 2.0 - 2018-04-13
* BUG#8646 Fix "Taxes included" boolean default visibility behaviour at coverage creation
* BUG#8547 Reactivate a void contract is based new on the contract start_date instead of its end_date
* BUG#8490 Fix searcher of contract invoices
* BUG#8461 Properly ignore cancelled invoices in contract invoicing batch
* BUG#8119 Manage contract without end date in get_future_invoices
* BUG#7987 Deletion / Cancellation of invoices when declining a quote
* BUG#7879 Fix behaviour of invoicing blocking which sometime caused duplicate invoices on a period
* BUG#7750 Fix non-synced billing period calculation
* OTH#0000 Make invoice line rounding behaviour easier to override
* OTH#0000 Fix contract invoice searcher following 4b8f11179
* FEA#7640 Block contract invoicing before a given date
* BUG#7535 Add missing authorizations on invoice taxes for the contract management group

Version 1.14 - 2017-11-09
* BUG#7467 Keep the premium precision when converting its frequency
* BUG#7492 Add contract on account move lines of taxes
* BUG#7395 Add check on manual invoice cancelling
* OTH#0000 Split the contract invoice creation batch query to ease override
* BUG#7337 Delete draft and approved payments related to an invoice which is cancelled
* BUG#7004 Block renewal contract if there are missing posted/paid invoices on the current term
* FEA#7170 Cleaning reconciliation code: More modularity and possibilities for overriding
* BUG#7188 Add a loader on contract.billing_information
* BUG#7145 Can't select write-off journal in reconciliation wizard when processing a write-off
* FEA#6950 Add invoice related functions in rule engine