@@ -1,3 +1,4 @@
+* FEA#8940 Ajout d'un batch de requittancement des contrats à partir d'un fichier csv
 * BUG#8962 Initialiser les montants des nouvelles quittances futures avec des décimales
 * BUG#8673 Ne pas sélectionner une quittance avec une date d'effet postérieur à la date de résiliation du contract dans le batch d'émission des quittances
 * OTH#0000 Ajout d'un contrôle d'existance d'informations de quittancement sur le contrat avant de procéder à l'initialisation
